# scholar1

./: .gitignore  ReadMe.md  create_project_structure.py  pyproject.toml  requirements-dev.txt
agentt/: agent.py  research_document.py  research_embedding.py  research_gap_analysis.py  research_topic_modeling.py  research_utils.py  test_import.py
agentt/outputs/: findings_analysis_analysis_20250607_132431.json  findings_analysis_analysis_20250607_195300.json  findings_analysis_analysis_20250609_173809.json  findings_analysis_analysis_20250609_173823.json  methodology_analysis_analysis_20250607_132429.json  methodology_analysis_analysis_20250607_195258.json  methodology_analysis_analysis_20250609_173807.json  methodology_analysis_analysis_20250609_173822.json  topic_analysis_analysis_20250607_132426.json  topic_analysis_analysis_20250607_195255.json  topic_analysis_analysis_20250609_173804.json  topic_analysis_analysis_20250609_173820.json  topic_analysis_analysis_20250609_174336.json  topic_analysis_analysis_20250609_174344.json  topic_analysis_analysis_20250609_182331.json  topic_analysis_analysis_20250609_182338.json  topic_analysis_analysis_20250609_183808.json  topic_analysis_analysis_20250609_183818.json
scholar_verse/agents/router_agent/: .env  agent.py  models.py  tools.py
scholar_verse/agents/router_agent/sub_agents/ingestion_agent/: __init__.py  agent.py  prompt.py  tools.py
sub_agents/ingestion_agent.py/: __init__.py  agent.py  prompt.py  tools.py
tests/: test_router_agent.py
